--- a/AE/AE.vcxproj.filters
+++ b/AE/AE.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="deletion_list.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Shootable.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ae.h">
@@ -108,6 +111,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="input.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Shootable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
