--- a/AE/AE.vcxproj.filters
+++ b/AE/AE.vcxproj.filters
@@ -65,9 +65,6 @@
     <ClInclude Include="log.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="renderable.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="vertex.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -77,9 +74,6 @@
     <ClInclude Include="duck.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="physable.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="world.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -87,9 +81,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ai_list.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="ai_character.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="hunter.h">
@@ -113,7 +104,16 @@
     <ClInclude Include="input.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Shootable.h">
+    <ClInclude Include="IRenderable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IAI_Character.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IPhysable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IShootable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
