--- a/AE/AE.vcxproj.filters
+++ b/AE/AE.vcxproj.filters
@@ -54,15 +54,18 @@
     <ClCompile Include="deletion_list.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Shootable.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="IHealthable.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ae.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="log.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="renderable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="vertex.h">
@@ -72,9 +75,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="duck.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="physable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="world.h">
@@ -108,6 +108,21 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="input.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IRenderable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IHealthable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IPhysable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IShootable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IAI_Character.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
